Fixed: content in all tables is vertically centered align.

--- a/dashboard/src/main/resources/static/asset/css/bootstrap.css
+++ b/dashboard/src/main/resources/static/asset/css/bootstrap.css
@@ -2840,7 +2840,7 @@ th {
 .table>thead>tr>th {
     padding: 8px;
     line-height: 1.42857143;
-    vertical-align: top;
+    vertical-align: middle;
     border-top: 1px solid #ddd
 }
 
